# claude-sdk-bridge

./: .gitignore  README.md
blog/: BLOG_POST.md
docs/: architecture.md  failure-modes.md
failed-attempts/01-direct-api/: FAILURE.md  attempt.py
failed-attempts/02-claude-code-sdk/: FAILURE.md  attempt.swift
failed-attempts/03-js-sdk/: FAILURE.md  attempt.js
failed-attempts/04-cli-subprocess/: FAILURE.md  attempt.swift
working-bridge/: README.md  bridge.py  executor.swift  pyproject.toml
